# rules_go

./: .bazelrc  Add secure_download macro with mandatory SHA-256 (VRP #462506853)  BUILD.bazel  MODULE.bazel  README.rst  WORKSPACE  go.mod  go.sum
.bazelci/: bcr.yml  presubmit.yml
.bcr/: presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
docs/: BUILD.bazel  doc_helpers.bzl
docs/go/core/: BUILD.bazel  bzlmod.md  rules.bzl  rules.md  workspace.md
examples/: .bazelrc
examples/basic_gazelle/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  printlinks_test.go
extras/: gomock.bzl
foo/: BUILD.bazel  foo.go  foo_test.go
foo/cmd/: BUILD.bazel  main.go
go/: BUILD.bazel  core.rst  dependencies.rst  modes.rst  nogo.rst  providers.rst  toolchains.rst
go/config/: BUILD.bazel
go/constraints/arm64/: BUILD.bazel
go/platform/: list.bzl
go/private/: BUILD.bazel  BUILD.sdk.bazel  common.bzl  context.bzl  coverage_shim  coverage_shim.go  dev_extensions.bzl  extensions.bzl  go_mod.bzl  go_toolchain.bzl  mode.bzl  nogo.bzl  providers.bzl  repositories.bzl  rpath.bzl  sdk.bzl  sdk_build_defs.bzl
go/private/actions/: archive.bzl  binary.bzl  compilepkg.bzl  link.bzl  stdlib.bzl
go/private/aspects/: buildinfo_aspect.bzl
go/private/experimental/: BUILD.bootstrap.sdk.bazel  bootstrap_rules.bzl
go/private/rules/: BUILD.bazel  binary.bzl  binary.tpl.sh  cgo.bzl  cross.bzl  generate_fips_package_list.sh  library.bzl  nogo.bzl  sdk.bzl  source.bzl  stdlib.bzl  test.bzl  transition.bzl
go/private/tools/: files_equal_test.bzl
go/runfiles/: BUILD.bazel  global.go  package_repo_map.go  package_repo_map_test.go  runfiles.go
go/toolchain/: BUILD.bazel
go/tools/bazel_testing/: BUILD.bazel  bazel_testing.go
go/tools/builders/: BUILD.bazel  buildinfo.go  buildinfo_test.go  cgo2.go  compilepkg.go  cover.go  cover_test.go  env.go  env_test.go  fips.go  fips_test.go  generate_nogo_main.go  go_path.go  goobj.go  goobj_test.go  importcfg.go  importgraph.go  importgraph_test.go  link.go  modinfo.go  nogo.go  nogo_main.go  nogo_validation.go  protoc.go  stdlib.go  stdliblist.go  testutil_test.go
go/tools/bzltestutil/: BUILD.bazel  coverage_visitor.go  lcov.go  test2json.go  wrap.go  xml.go
go/tools/bzltestutil/bincov/: exit_hook.go
go/tools/go_bin_runner/: main.go
go/tools/gopackagesdriver/: BUILD.bazel  bazel.go  bazel_json_builder.go  build_context.go  flatpackage.go  gopackagesdriver_test.go  json_packages_driver.go  main.go
go/tools/releaser/: boilerplate.go
internal/: BUILD.bazel  nogo.json
proto/: BUILD.bazel  compiler.bzl  def.bzl
tests/bcr/: .bazelrc  BUILD.bazel  MODULE.bazel  nogo.json
tests/bcr/proto/: BUILD.bazel
tests/core/buildinfo/: BUILD.bazel  README.md  external_deps_bin_unix.go  external_deps_bin_windows.go  external_deps_test.go  leaf_lib.go  metadata_bin.go  metadata_test.go  mid_lib.go  top_lib.go
tests/core/cgo/: BUILD.bazel  adder_test.go  cc_header_inputs_test.go  cc_linker_inputs_test.go  cdeps_embed.h  cdeps_embed_base.go  cdeps_embed_test.go  cgo_ldflags_test.go  check_rpath.sh  wrapped_cgo_test.go
tests/core/cgo/cc_static_init/: BUILD.bazel  README.rst  lib.cpp  lib.h  side_effect.cpp  test_side_effect.cpp  test_side_effect.go
tests/core/cgo/cgo_alwayslink_init/: README.rst
tests/core/compatibility/: BUILD.bazel
tests/core/coverage/: coverage_test.go  issue4414_test.go  lcov_coverage_test.go
tests/core/cross/: BUILD.bazel  proto_test.go
tests/core/from_go_mod_file/: from_go_mod_file_test.go
tests/core/go_binary/: BUILD.bazel  README.rst  bind_now_test.go  buildinfo_test.go  godebug_bin.go  godebug_test.go  gofips140_test.go  meaning2.go  pie_linux_test.go
tests/core/go_download_sdk/: go_download_sdk_test.go
tests/core/go_library/: BUILD.bazel  inc_relative.s  trimpath_test.go  use_syso.go
tests/core/go_path/pkg/lib/: BUILD.bazel  lib.go
tests/core/go_path/pkg/lib/directory/: symlink_nested-directory
tests/core/go_plugin_with_proto_library/: BUILD.bazel
tests/core/go_proto_library_import_public/: BUILD.bazel  dog.proto  import_public_test.go
tests/core/go_proto_library_import_public/new_dir/: BUILD.bazel  dog_collar.proto
tests/core/go_proto_library_import_public/old_dir/: BUILD.bazel  dog_collar.proto
tests/core/go_test/: data_test.go  syso_direct_test.go  testmain_pwd_test.go  xml_panic_test.go
tests/core/headers/: BUILD.bazel
tests/core/impure_env/: BUILD.bazel  lib.go  test.go  test_multiple_env.go  test_no_env.go
tests/core/nogo/bzlmod/: includes_excludes_test.go
tests/core/nogo/custom/: custom_test.go
tests/core/nogo/custom/flags/: flags_test.go
tests/core/nogo/host_mode/: BUILD.bazel  README.rst  host_mode_test.go
tests/core/nogo/includes_excludes/: includes_excludes_test.go
tests/core/nogo/vet/: vet_test.go
tests/core/output_groups/: compilation_outputs_test.go
tests/core/starlark/: BUILD.bazel  module_info_tests.bzl  sdk_tests.bzl
tests/core/stdlib/: BUILD.bazel  buildid_test.go
tests/core/transition/: cmdline_test.go  hermeticity_test.go
tests/integration/gazelle/: gazelle_test.go
tests/integration/popular_repos/: BUILD.bazel  README.rst  popular_repos.py
tests/integration/reproducibility/: reproducibility_test.go
tests/runfiles/: fs_test.go  runfiles_bazel_test.go  runfiles_test.go
