load(
    "@bazel_skylib//rules:common_settings.bzl",
    "bool_flag",
    "string_flag",
    "string_list_flag",
)

bool_flag(
    name = "static",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "race",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "msan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "pure",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "debug",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "experimental_use_sh_toolchain",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

string_flag(
    name = "linkmode",
    build_setting_default = "auto",
    visibility = ["//visibility:public"],
)

string_list_flag(
    name = "gc_linkopts",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

string_list_flag(
    name = "tags",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "cover_format",
    build_setting_default = "lcov",
    values = [
        "go_cover",
        "lcov",
    ],
    visibility = ["//visibility:public"],
)

# When enabled, source paths recorded under -trimpath are rewritten to be
# importpath-relative (matching native `go build -trimpath`) instead of
# execroot-relative, so debuggers can resolve them without configuration.
# Note: runfiles.CurrentRepository()/CallerRepository() infer the caller's
# repository from the execroot-relative path shape and report the main
# repository for all callers when this is enabled.
bool_flag(
    name = "importpath_trimpath",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

string_list_flag(
    name = "gc_goopts",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

label_flag(
    name = "pgoprofile",
    build_setting_default = ":empty",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "empty",
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "export_stdlib",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
