load("@io_bazel_rules_go//go/private:sdk_build_defs.bzl", "STDLIB_SRCS_EXCLUDE", "define_sdk_repository_targets")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "libs",
    srcs = glob(
        ["pkg/{goos}_{goarch}/**/*.a"],
        allow_empty = True,
        exclude = ["pkg/{goos}_{goarch}/**/cmd/**"],
    ),
)

filegroup(
    name = "headers",
    srcs = glob(["pkg/include/*.h"]),
)

filegroup(
    name = "srcs",
    srcs = glob(
        ["src/**/*"],
        allow_empty = True,
        exclude = STDLIB_SRCS_EXCLUDE,
    ),
)

filegroup(
    name = "tools",
    srcs = glob([
        "pkg/tool/**",
        "bin/gofmt*",
    ]) + [
        ":config",
    ],
)

filegroup(
    name = "compiler_binaries",
    srcs = glob(
        [
            "pkg/tool/{goos}_{goarch}/asm*",
            "pkg/tool/{goos}_{goarch}/cgo*",
            "pkg/tool/{goos}_{goarch}/compile*",
            "pkg/tool/{goos}_{goarch}/cover*",
            "pkg/tool/{goos}_{goarch}/link*",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "config",
    srcs = glob(
        ["go.env*"],
        allow_empty = True,
    ),
)

define_sdk_repository_targets(
    experiments = {experiments},
    exec_compatible_with = {exec_compatible_with},
    files_srcs = glob([
        "bin/go*",
        "src/**",
        "pkg/**",
    ]) + [
        ":config",
    ],
    go = "bin/go{exe}",
    goarch = "{goarch}",
    goos = "{goos}",
    go_sdk_root_file = "ROOT",
    package_list_srcs = [":srcs"],
    version = "{version}",
)
