load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    ":toolchains.bzl",
    "declare_constraints",
)

package(default_visibility = ["//visibility:public"])

declare_constraints()

string_flag(
    name = "sdk_version",
    build_setting_default = "",
)

string_flag(
    name = "sdk_name",
    build_setting_default = "",
)

string_flag(
    name = "source",
    build_setting_default = "prebuilt",
    values = [
        "bootstrapped",
        "prebuilt",
    ],
)

config_setting(
    name = "source_bootstrapped",
    flag_values = {
        ":source": "bootstrapped",
    },
)

config_setting(
    name = "source_prebuilt",
    flag_values = {
        ":source": "prebuilt",
    },
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    deps = [
        "//go/private:platforms",
        "//go/private:sdk",
    ],
)
