load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//go/private:sdk.bzl", "SDK_SOURCE_BOOTSTRAPPED", "SDK_SOURCE_PREBUILT")
load(
    ":toolchains.bzl",
    "declare_constraints",
)

package(default_visibility = ["//visibility:public"])

declare_constraints()

string_flag(
    name = "sdk_version",
    build_setting_default = "",
)

string_flag(
    name = "sdk_name",
    build_setting_default = "",
)

string_flag(
    name = "experimental_source",
    build_setting_default = SDK_SOURCE_PREBUILT,
    values = [
        SDK_SOURCE_BOOTSTRAPPED,
        SDK_SOURCE_PREBUILT,
    ],
)

config_setting(
    name = "bootstrapped",
    flag_values = {
        ":experimental_source": SDK_SOURCE_BOOTSTRAPPED,
    },
)

config_setting(
    name = "prebuilt",
    flag_values = {
        ":experimental_source": SDK_SOURCE_PREBUILT,
    },
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    deps = [
        "//go/private:platforms",
        "//go/private:sdk",
    ],
)
