load("//go:def.bzl", "go_binary", "go_cross_binary")

go_binary(
    name = "hello",
    srcs = ["hello.go"],
)

go_cross_binary(
    name = "hello_old",
    sdk_version = "1.22",
    target = ":hello",
    target_compatible_with = select({
        "@io_bazel_rules_go//go/toolchain:source_bootstrapped": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
